<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    android:backgroundTint="#79000000"
    android:backgroundTintMode="src_atop"
    android:orientation="vertical"
    tools:context=".ScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gameOver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/game_over"
            android:textColor="#E91E63"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/highScores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/your_score"
                android:textColor="@color/white"
                android:textSize="30sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/play_again"
            android:textColor="#FFEB3B"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="30dp"
            android:gravity="bottom|center_horizontal">

            <TextView

                android:id="@+id/mainMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/main_menu"
                android:textColor="#84FFFB"
                android:textSize="25sp" />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>
